# simple-crc

./: CMakeLists.txt  LICENSE
include/: crc.h
src/: crc.c
